--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,9 @@ dependencies {
 	// ORM ( 내가 작성한 SQL 결과를 JAVA로 변환 *** 면접때 나옴)
 	// ORM 종류 : Mybatis , JPA
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'
+	//Spring security
+	implementation "org.springframework.security:spring-security-web"
+	implementation "org.springframework.security:spring-security-config"
 }
 
 tasks.named('test') {
